--- a/links/package.json
+++ b/links/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.1",
     "resend": "^4.1.2",
     "sonner": "^2.0.1",
