--- a/links/package.json
+++ b/links/package.json
@@ -36,6 +36,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1",
     "react-syntax-highlighter": "^15.6.1",
     "resend": "^4.1.2",
     "sonner": "^2.0.1",
