--- a/links/package.json
+++ b/links/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^7.4.1",
     "react-syntax-highlighter": "^15.6.1",
     "resend": "^4.1.2",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
