--- a/links/package.json
+++ b/links/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev --turbopack -H 0.0.0.0",
+    "build": "next build -H 0.0.0.0",
+    "start": "next start -H 0.0.0.0",
+    "lint": "next lint -H 0.0.0.0"
   },
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
