--- a/links/package.json
+++ b/links/package.json
@@ -47,6 +47,8 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
     "shiki": "^3.2.1",
     "tailwindcss": "^4",
     "typescript": "^5"
