feat(types): added types folder

--- a/links/package.json
+++ b/links/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -H 0.0.0.0",
+    "dev:safe":"next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
